--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Javascript</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+	<link rel="stylesheet" href="./css/main.css">
 	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </head>
 <body>
@@ -54,7 +55,7 @@
 
 			<tr class="patient">
 				<td>Tatiana</td>
-				<td class="info-weight">46</td>
+				<td class="info-weight">4000</td>
 				<td class="info-height">1.55</td>
 				<td class="info-body-fat">19</td>
 				<td class="info-imc">19.15</td>
