Add function append tr in table

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<th>IMC</th>
 			</tr>
 		</thead>
-		<tbody>
+		<tbody class="tbody">
 			<tr class="patient">
 				<td>Paulo</td>
 				<td class="info-weight">100</td>
@@ -66,7 +66,7 @@
 		<div class="mdl-grid">
 		   	<h2 class="mdl-cell mdl-cell--4-col">Add new patient</h2>
 			<ul id="error-messages"></ul>
-		    <form id="form-add">
+		    <form class="form-add">
 		         <div class="mdl-cell mdl-cell--11-col mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 		            <label class="mdl-textfield__label">Name:</label>
 		            <input class="mdl-textfield__input" name="name" type="text" placeholder="Enter the name of your patient">
@@ -81,7 +81,7 @@
 		        </div>
 		        <div class="mdl-cell mdl-cell--3-col mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 		            <label class="mdl-textfield__label">% of Fat:</label>
-		            <input class="mdl-textfield__input" type="text" placeholder="Enter the percentage of fat for your patient">
+		            <input class="mdl-textfield__input" name="fat" type="text" placeholder="Enter the percentage of fat for your patient">
 		        </div>
 				
 				<div class="mdl-cell mdl-cell--12-col">
