Good Practices with Javascript

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 		</div>
 	</div>
 	
-	<script src="./js/main.js"></script>
+	<script src="./js/calculate-imc.js"></script>
+	<script src="./js/form.js"></script>
 </body>
 </html>
