Add validations form

--- a/index.html
+++ b/index.html
@@ -65,8 +65,10 @@
 	
 		<div class="mdl-grid">
 		   	<h2 class="mdl-cell mdl-cell--4-col">Add new patient</h2>
-			<ul id="error-messages"></ul>
 		    <form class="form-add">
+
+			<ul class="error-messages demo-list-item mdl-list"></ul>
+			
 		         <div class="mdl-cell mdl-cell--11-col mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 		            <label class="mdl-textfield__label">Name:</label>
 		            <input class="mdl-textfield__input" name="name" type="text" placeholder="Enter the name of your patient">
