Remoção, Delegação e Animação

--- a/index.html
+++ b/index.html
@@ -95,5 +95,6 @@
 	
 	<script src="./js/calculate-imc.js"></script>
 	<script src="./js/form.js"></script>
+	<script src="./js/remove-patient.js"></script>
 </body>
 </html>
