Buscando pacientes com AJAX

--- a/index.html
+++ b/index.html
@@ -67,8 +67,12 @@
 				<td class="info-imc">19.15</td>
 			</tr>
 		</tbody>
-	</table>
+	<div class="mdl-cell mdl-cell--12-col">
+		    <button class="mdl-button mdl-js-button mdl-button--raised button-search">Search Patients</button>
+	</div>
 	
+	</table>
+
 		<div class="mdl-grid">
 		   	<h2 class="mdl-cell mdl-cell--4-col">Add new patient</h2>
 		    <form class="form-add">
@@ -103,5 +107,6 @@
 	<script src="./js/form.js"></script>
 	<script src="./js/remove-patient.js"></script>
 	<script src="./js/filter.js"></script>
+	<script src="./js/search-patients.js"></script>
 </body>
 </html>
